--- a/PPTT/Pages/Administradores/Delete.cshtml
+++ b/PPTT/Pages/Administradores/Delete.cshtml
@@ -17,7 +17,7 @@
 }
 
 <h3>Borrar</h3>
-<h4>¿Estás seguro de borrar a este usuario?</h4>
+<h4>¿Estás seguro de dar de baja a este usuario?</h4>
 <form method="post">
     <div>
         <dl class="row">
@@ -87,7 +87,7 @@
             </dd>
         </dl>
         <input type="hidden" asp-for="Admin.ID_Usuario_Pk" />
-        <input type="submit" value="Borrar" class="btn btn-danger" />
+        <input type="submit" value="Dar de baja" class="btn btn-danger" />
     </div>
 </form>
 <div class="centered-button">
