--- a/PPTT/Pages/PT/Create.cshtml
+++ b/PPTT/Pages/PT/Create.cshtml
@@ -5,10 +5,14 @@
     ViewData["Title"] = "Crear Orden de Trabajo";
 }
 
-<div class="row">
-    <div class="col-md-4">
+<div class="page-content">
+    <div class="form-alta">
+        <div class="formulario">
+            <legend>Formulario Pedido de Trabajo</legend>
+            <hr/>
         <form method="post">
-            <h2>Datos del solicitante: </h2>
+            <fieldset>
+                    <h3>Datos del solicitante:</b></h3>
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="PedidoTrabajo.ID_Grado_Fk" class="control-label"></label>
@@ -19,7 +23,7 @@
                             Text = d.Descripcion_Grado.ToString()
                         })"
                         id="deptSelect"
-                        class="formControl">
+                        class="form-control">
                     <option hidden selected value="">Seleccione el Grado</option>
                 </select>
                 <span asp-validation-for="PedidoTrabajo.ID_Grado_Fk" class="text-danger"></span>
@@ -38,14 +42,14 @@
                             Text = d.Descripcion_organismo.ToString()
                         })"
                         id="orgSelect"
-                        class="formControl">
+                        class="form-control">
                     <option hidden selected value="">Seleccione el Organismo</option>
                 </select>
                 <span asp-validation-for="PedidoTrabajo.ID_Organismo_Fk" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="PedidoTrabajo.ID_Dependencia_Interna_Fk" id="dependenciaLabel" class="control-label"></label>
-                <select asp-for="PedidoTrabajo.ID_Dependencia_Interna_Fk" id="dependenciaSelect" class="formControl">
+                <select asp-for="PedidoTrabajo.ID_Dependencia_Interna_Fk" id="dependenciaSelect" class="form-control">
                     <option hidden select value="">Seleccione la dependencia correspondiente</option>
                 </select>
                 <span asp-validation-for="PedidoTrabajo.ID_Dependencia_Interna_Fk" class="text-danger"></span>
@@ -80,7 +84,7 @@
             @{
                 // DATOS DEL TRABAJO
             }
-            <h2>Datos del trabajo: </h2>
+            <h3>Datos del trabajo: </h3>
             <div class="form-group">
                 <label asp-for="PedidoTrabajo.ID_Division_Fk" class="control-label"></label>
                 <select asp-for="PedidoTrabajo.ID_Division_Fk"
@@ -90,27 +94,27 @@
                             Text = d.Descripcion_Division
                         })"
                         id="divisionSelect"
-                        class="formControl">
+                        class="form-control">
                     <option hidden selected value="">Seleccione Division</option>
                 </select>
                 <span asp-validation-for="PedidoTrabajo.ID_Division_Fk" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label id="servicioLabel" class="control-label">Servicio</label>
-                <select id="servicioSelect" class="formControl">
+                <select id="servicioSelect" class="form-control">
                     <option hidden select value="">Seleccione el servicio correspondiente</option>
                 </select>
             </div>
             <div class="form-group">
                 <label asp-for="PedidoTrabajo.ID_Tarea_Fk" id="tareaLabel" class="control-label"></label>
-                <select asp-for="PedidoTrabajo.ID_Tarea_Fk" id="tareaSelect" class="formControl">
+                <select asp-for="PedidoTrabajo.ID_Tarea_Fk" id="tareaSelect" class="form-control">
                     <option hidden select value="">Seleccione la tarea correspondiente</option>
                 </select>
                 <span asp-validation-for="PedidoTrabajo.ID_Tarea_Fk" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="PedidoTrabajo.Piso_Oficina_PT" class="control-label"></label>
-                <select asp-for="PedidoTrabajo.Piso_Oficina_PT" class="bordered" asp-items="Model.PisosOficina">
+                <select asp-for="PedidoTrabajo.Piso_Oficina_PT" class="form-control" asp-items="Model.PisosOficina">
                     <option hidden selected value="">Piso Pedido de Trabajo</option>
                 </select>
                 <span asp-validation-for="PedidoTrabajo.Piso_Oficina_PT" class="text-danger"></span>
@@ -122,22 +126,24 @@
             </div>
             <div class="form-group">
                 <label asp-for="PedidoTrabajo.Color_Oficina_PT" class="control-label"></label>
-                <select asp-for="PedidoTrabajo.Color_Oficina_PT" class="bordered" asp-items="Model.ColoresOficina">
+                <select asp-for="PedidoTrabajo.Color_Oficina_PT" class="form-control" asp-items="Model.ColoresOficina">
                     <option hidden selected value="">Seleccione un color</option>
                 </select>
                 <span asp-validation-for="PedidoTrabajo.Color_Oficina_PT" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="PedidoTrabajo.Observacion" class="control-label"></label>
+                <br/>
                 <textarea asp-for="PedidoTrabajo.Observacion" class="custom-textarea"></textarea>
                 <span asp-validation-for="PedidoTrabajo.Observacion" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" class="submit" value="Crear">
+                <input type="submit" class="submit-log" value="Crear">
             </div>
+            </fieldset>
         </form>
         <a href="/" class="btn-action">Volver al Menu</a>
-
+        </div>
     </div>
 </div>
 @section Scripts {
@@ -228,171 +234,11 @@
         body {
             background-color: #e0e8f1;
             overflow-x: hidden;
-        }
-
-        a.btn-action {
-            display: inline-block;
-            text-decoration: none;
-            padding: 8px 12px;
-            margin: 4px;
-            border: 1px solid #003d6b;
-            border-radius: 5px;
-            background-color: #003d6b;
-            color: white;
-            transition: background-color 0.3s, transform 0.3s;
-        }
-
-            a.btn-action:hover {
-                background-color: #002e5d;
-                transform: translateY(-2px);
-            }
-                    submit {
-            display: inline-block;
-            text-decoration: none;
-            padding: 8px 12px;
-            margin: 4px;
-            border: 1px solid #003d6b;
-            border-radius: 5px;
-            background-color: #003d6b;
-            color: white;
-            transition: background-color 0.3s, transform 0.3s;
-        }
-
-            submit:hover {
-                background-color: #002e5d;
-                transform: translateY(-2px);
-            }
-
-
-        
-
-        .vol {
-            display: inline-block;
-            text-decoration: none;
-            padding: 8px 12px;
-            margin: 4px;
-            border: 1px solid #003d6b;
-            border-radius: 5px;
-            background-color: #003d6b;
-            color: white;
-            transition: background-color 0.3s, transform 0.3s;
-        }
-
-            .vol:hover {
-                background-color: #002e5d;
-                transform: translateY(-2px);
-            }
-   
-        legend {
-            font-size: 1.2em;
-            color: #003d6b;
-            margin-bottom: 10px;
-            font-weight: bold;
         }        
 
-        h4 {
-            color: #003d6b;
-            margin-top: 20px;
-            margin-bottom: 10px;
-            font-weight: bold;
-        }
-
-        asap-for {
-            color: #003d6b;
-            margin-top: 20px;
-            margin-bottom: 10px;
-            font-weight: bold;
-        }
-
         h3 {
-            font-size: 3em;
-            color: #003d6b;
-            margin-top: 20px;
-            margin-bottom: 10px;
-            font-weight: bold;
+            font-size: 1.5em;
         }
-
-        h2 {
-            font-size: 2.5em;
-            color: #003d6b;
-            margin-top: 20px;
-            margin-bottom: 10px;
-            font-weight: bold;
-        }
-
-        .custom-textarea {
-            width: 100%;
-            height: 150px;
-            resize: none;
-            border: 1px solid #003d6b;
-            border-radius: 4px;
-            background-color: white;
-        }
-
-        a.btn-action:hover {
-            background-color: #002e5d; /* Color en hover */
-            transform: translateY(-2px);
-        }
-
-        label,
-        input[type="text"],
-        select,
-        .submit,
-        h4 {
-            font-size: 1em;
-            font-weight: bold;
-            color: #003d6b; /* Asegurarte de que las etiquetas label y h4 compartan el mismo color */
-        }
-
-        input[type="number"],
-        select,
-        .submit,
-        h4 {
-            font-size: 1em;
-            font-weight: bold;
-        }
-
-        input[type="password"],
-        select {
-            width: 100%;
-            padding: 8px;
-            margin-bottom: 15px;
-            border: 1px solid #003d6b;
-            border-radius: 4px;
-            background-color: white;
-        }
-
-        input[type="text"],
-        select {
-            width: 100%;
-            padding: 8px;
-            margin-bottom: 15px;
-            border: 1px solid #003d6b;
-            border-radius: 4px;
-            background-color: white;
-        }
-
-        input[type="number"],
-        select {
-            width: 100%;
-            padding: 8px;
-            margin-bottom: 15px;
-            border: 1px solid #003d6b;
-            border-radius: 4px;
-            background-color: white;
-        }
-       
-        .bordered {
-            border: 1px solid #003d6b;
-            border-radius: 4px;
-            background-color: white;
-        }
-
-        .row {
-            align-items: center;
-            justify-content: center;
-        }
-
     </style>
 }
 
