--- a/PPTT/Pages/PT/Finalizados.cshtml
+++ b/PPTT/Pages/PT/Finalizados.cshtml
@@ -56,7 +56,7 @@
         <tbody>
             @foreach (var item in Model.PedidoTrabajo)
             {
-                if (item.ID_Estado_Fk != 1004 && item.ID_Estado_Fk != 1006)
+                if (item.ID_Estado_Fk == 1004 || item.ID_Estado_Fk == 1006)
                 {
                     <tr>
                         <td>
@@ -279,11 +279,7 @@
         color: #f1faee;
         padding: 10px 0;
         box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.1);
-    }
-
-    body {
-        overflow-y: hidden;
-    }
+    }   
 
     .submit {
         background-color: #e63946;
