--- a/PPTT/Pages/Shared/_Layout.cshtml
+++ b/PPTT/Pages/Shared/_Layout.cshtml
@@ -17,6 +17,7 @@
     <header>
         <div class="navbar">
             <div class="navbar-logo">
+                <a asp-page="/Vistas/IndexLogueado"><img src="~/imagenes/3.png" alt="logogc" /></a>
                 <a class="a-to-index" asp-page="/Vistas/IndexLogueado">Pedidos de Trabajo - Cuartel General</a>
             </div>
             <div class="centered-button">
