--- a/PPTT/Pages/PT/Create.cshtml
+++ b/PPTT/Pages/PT/Create.cshtml
@@ -235,7 +235,9 @@
             background-color: #e0e8f1;
             overflow-x: hidden;
         }        
-
+        textarea {
+            width: 100%;
+        }
         h3 {
             font-size: 1.5em;
         }
