--- a/PPTT/Pages/PT/Index.cshtml
+++ b/PPTT/Pages/PT/Index.cshtml
@@ -86,7 +86,7 @@
             }
 
         }
-    }
+    
     </tbody>
 </table>
 <div class="pagination">
@@ -124,7 +124,7 @@
             });
         });
     </script>
-   <!-- <form method="get">
+   <form method="get">
         <label for="fechaInicio">Fecha Inicio:</label>
         <input type="text" id="fechaInicio" name="fechaInicio" required />
 
@@ -132,7 +132,7 @@
         <input type="text" id="fechaFin" name="fechaFin" required />
         
         <button type="button" id="filtrar" class="filtrar">Filtrar</button>
-         </form>-->
+         </form>
     <a asp-page="./Finalizados" class="btn-action">Trabajos Finalizados</a>
 </div>
 
