--- a/PPTT/Pages/Shared/_Layout.cshtml
+++ b/PPTT/Pages/Shared/_Layout.cshtml
@@ -24,7 +24,7 @@
                 @if (!pages.Contains(currentPage))
                 {
                     <form method="post" asp-page="/Vistas/IndexLogueado" asp-page-handler="cerrar">
-                        <input type="submit" value="Cerrar Sesion" class="submit" />
+                        <input type="submit" value="Cerrar Sesion" class="cerrarsesion" />
                     </form>
                 }
             </div>
