--- a/PPTT/wwwroot/css/site.css
+++ b/PPTT/wwwroot/css/site.css
@@ -45,32 +45,20 @@ body {
     padding: 40px 0;
     flex-grow: 1;
 }
-.input cerrarsesion {
-    background-color: #ff4757; /* Color de fondo: rojo suave */
-    color: #ffffff; /* Color del texto: blanco */
-    border: none; /* Sin borde */
-    padding: 10px 20px; /* Espaciado interno */
-    font-size: 16px; /* Tamaño de la fuente */
-    font-weight: bold; /* Negrita */
-    border-radius: 8px; /* Bordes redondeados */
-    cursor: pointer; /* Cambio de cursor */
-    transition: background-color 0.3s, transform 0.2s; /* Transición de color y escala */
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Sombra */
+.cerrarsesion {
+    background-color: transparent;
+    color: #f1faee;
+    border: none;
+    padding: 0;
+    font-size: 16px;
+    font-weight: bold;
+    cursor: pointer;
+    outline: none;    
 }
 
-/* Efecto al pasar el mouse */
     .cerrarsesion:hover {
-        background-color: #e84118; /* Color de fondo más oscuro al pasar el mouse */
-        transform: scale(1.05); /* Efecto de escala */
+        color: #f1ffff;
     }
-
-/* Efecto al hacer clic */
-    .cerrarsesion:active {
-        background-color: #c23616; /* Color más oscuro al hacer clic */
-        transform: scale(0.95); /* Reducir tamaño */
-    }
-
-
 
 .card {
     background-color: #1d3557;
@@ -217,8 +205,9 @@ footer {
     margin-bottom: 15px;
     border: 1px solid #003d6b;
     border-radius: 4px;
-    background-color: white;
+    background-color: #f2f2f2; 
 }
+
 
 input[type=number]::-webkit-inner-spin-button,
 input[type=number]::-webkit-outer-spin-button {
