--- a/PPTT/Pages/Administradores/Delete.cshtml
+++ b/PPTT/Pages/Administradores/Delete.cshtml
@@ -91,7 +91,17 @@
     </div>
 </form>
 <div class="centered-button">
-    <a asp-page="./Index" type="boton" class="btn-action">Volver a la Lista</a>
+    @{
+        int _rol = HttpContext.Session.GetInt32("UserRole") ?? 0;
+    }
+    @if (_rol == 3)
+    {
+        <a class="btn-action" asp-page="./Index" type="boton" class="btn-action">Volver a la Lista</a>
+    }
+    else
+    {
+        <a class="btn-action" asp-page="./IndexAdminU">Volver a la Lista</a>
+    }
 </div>
 
 <style>
