--- a/PPTT/Pages/Administradores/Details.cshtml
+++ b/PPTT/Pages/Administradores/Details.cshtml
@@ -106,7 +106,17 @@
     </div>
     <div class="centered-button">
         <a asp-page="./Edit" asp-route-id="@Model.Admin.ID_Usuario_Pk" class="btn-action">Editar</a>|
-        <a asp-page="./Index" class="btn-action">Volver a la lista</a>
+        @{
+            int _rol = HttpContext.Session.GetInt32("UserRole") ?? 0;
+        }
+        @if (_rol == 3)
+        {
+            <a class="btn-action" asp-page="./Index" type="boton" class="btn-action">Volver a la Lista</a>
+        }
+        else
+        {
+            <a class="btn-action" asp-page="./IndexAdminU">Volver a la Lista</a>
+        }
     </div>
         </div>
 
