--- a/PPTT/Pages/Administradores/Edit.cshtml
+++ b/PPTT/Pages/Administradores/Edit.cshtml
@@ -74,8 +74,26 @@
         </div>
     </div>
     <div class="centered-button">
-        <a class="btn-action" asp-page="../Vistas/IndexLogueado">Volver al menú</a> |
-        <a class="btn-action" asp-page="./Index">Ir lista de usuarios</a>
+        @{
+            int _rol = HttpContext.Session.GetInt32("UserRole") ?? 0;
+        }
+        @if (_rol == 3)
+        {
+            <a class="btn-action" asp-page="../Vistas/IndexLogueado">Volver al menú</a>
+        }
+        else
+        {
+            <a class="btn-action" asp-page="../Vistas/IndexAdmin">Volver al menú</a>
+        }
+        |
+        @if (_rol == 3)
+        {
+            <a class="btn-action" asp-page="./Index" type="boton" class="btn-action">Volver a la Lista</a>
+        }
+        else
+        {
+            <a class="btn-action" asp-page="./IndexAdminU">Volver a la Lista</a>
+        }
     </div>
  </div>
 
