--- a/PPTT/Pages/Vistas/IndexAdmin.cshtml
+++ b/PPTT/Pages/Vistas/IndexAdmin.cshtml
@@ -6,7 +6,7 @@
 <body>    
     <div class="card-container">
         <a asp-page="/PT/IndexAdmin"> <div class="card">Lista Pedidos de Trabajo</div></a>
-        <a asp-page="/Administradores/Index"><div class="card">Listado de Usuarios</div></a>
+        <a asp-page="/Administradores/IndexAdminU"><div class="card">Listado de Usuarios</div></a>
         <a asp-page="/Administradores/Create"><div class="card">Alta de Usuario</div></a>
 @*         <div class="card">Baja de Usuario</div>
         <div class="card">Pedidos de Trabajo</div> *@
