--- a/PPTT/Pages/Shared/_Layout.cshtml
+++ b/PPTT/Pages/Shared/_Layout.cshtml
@@ -19,7 +19,7 @@
         <div class="navbar">
             <div class="navbar-logo">
                 <a asp-page="/Vistas/IndexLogueado"><img src="~/imagenes/3.png" alt="logogc" /></a>
-                <a class="a-to-index" asp-page="/Vistas/IndexLogueado">Pedidos de Trabajo - Cuartel General</a>
+                <a class="a-to-index" asp-page="/Vistas/IngresoPersonal">Pedidos de Trabajo - Cuartel General</a>
             </div>
             <div class="centered-button">
                 @if (!pages.Contains(currentPage))
