Diseño de footer.

--- a/PPTT/Pages/Shared/_Layout.cshtml
+++ b/PPTT/Pages/Shared/_Layout.cshtml
@@ -42,6 +42,7 @@
     <script src="~/js/site.js" asp-append-version="true"></script>
     <footer>
         <p>Dirección de Informática - Departamento de Desarrollo y Mantenimiento de Sistemas</p>
+        <img src="~/imagenes/dirinfo (1).gif" alt="logogc" />
     </footer>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
