--- a/PPTT/wwwroot/css/site.css
+++ b/PPTT/wwwroot/css/site.css
@@ -1,26 +1,27 @@
+
 html {
-  font-size: 14px;
+    font-size: 14px;
 }
 
 @media (min-width: 768px) {
-  html {
-    font-size: 16px;
-  }
+    html {
+        font-size: 16px;
+    }
+}
+
+body {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh; /* Ocupa toda la altura del viewport */
+    margin: 0;
+    padding: 0;
+    background-color: #eeeeee;
 }
 
 .btn:focus, .btn:active:focus, .btn-link.nav-link:focus, .form-control:focus, .form-check-input:focus {
   box-shadow: 0 0 0 0.1rem white, 0 0 0 0.25rem #258cfb;
 }
 
-html {
-  position: relative;
-  min-height: 100%;
-}
-
-body {
-    margin-bottom: 60px;
-    background-color: #eeeeee;
-}
 .submit {
     background-color: #f1faee;
     color: #1d3557;
@@ -114,16 +115,16 @@ header {
 footer {
     background-color: #1d3557;
     color: #f1faee;
-    padding: 15px 0;
     text-align: center;
     font-size: 0.9em;
-    position: fixed;
     width: 100%;
-    bottom: 0;
-    height: 5vh;
+    height: auto;
     display: flex;
     align-items: center;
     justify-content: center;
+    gap: 10px;
+    padding: 10px 0;
+    margin-top: auto; 
 }
 
 .a-to-index {
@@ -152,12 +153,13 @@ footer {
     }
 
 .page-content {
+    flex: 1; 
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
     min-height: 85vh;
-    background-color: #f0f2f5; /* Color de fondo opcional */
+    background-color: #f0f2f5;
 }
 
 .row-inputs {
