--- a/PPTT/Pages/Administradores/Create.cshtml
+++ b/PPTT/Pages/Administradores/Create.cshtml
@@ -81,7 +81,7 @@
         {
             <a class="btn-action" asp-page="./Vistas/IndexAdmin">Volver al menú</a>
         }
-        <a class="btn-action" asp-page="./Index">Ir lista de usuarios</a>
+        <a class="btn-action" asp-page="./Index">Volver al Listado</a>
     </div>
 </div>
 <style>    
