--- a/PPTT/Pages/PT/Details.cshtml
+++ b/PPTT/Pages/PT/Details.cshtml
@@ -349,7 +349,7 @@
                     }
                 }
                 else
-                {
+                { 
                     <tr>
                         <td colspan="2">No hay motivos disponibles.</td> 
                     </tr>
@@ -358,7 +358,7 @@
         </table>
     </div>-->
     <div>
-        <a href="javascript:window.history.back();" class="btn-action">Volver a la Lista</a>
+        <a href="javascript:window.history.back();" class="btn-action">Volver al Listado</a>
     </div>
     <script src="Motivo
 CANCELADOhttps://code.jquery.com/jquery-3.6.0.min.js"></script>
