--- a/PPTT/Pages/Administradores/Delete.cshtml
+++ b/PPTT/Pages/Administradores/Delete.cshtml
@@ -96,11 +96,11 @@
     }
     @if (_rol == 3)
     {
-        <a class="btn-action" asp-page="./Index" type="boton" class="btn-action">Volver a la Lista</a>
+        <a class="btn-action" asp-page="./Index" type="boton" class="btn-action">Volver al Listado</a>
     }
     else
     {
-        <a class="btn-action" asp-page="./IndexAdminU">Volver a la Lista</a>
+        <a class="btn-action" asp-page="./IndexAdminU">Volver al Listado</a>
     }
 </div>
 
