--- a/PPTT/Pages/PT/Create.cshtml
+++ b/PPTT/Pages/PT/Create.cshtml
@@ -138,11 +138,10 @@
                 <span asp-validation-for="PedidoTrabajo.Observacion" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" class="submit-log" value="Crear">
+                <input type="submit" class="submit-log" value="Enviar Pedido">
             </div>
             </fieldset>
-        </form>
-        <a href="/" class="btn-action">Volver al Menu</a>
+        </form>        
         </div>
     </div>
 </div>
