--- a/PPTT/Pages/PT/FinalizadosAdmin.cshtml
+++ b/PPTT/Pages/PT/FinalizadosAdmin.cshtml
@@ -6,6 +6,36 @@
 }
 
 <body>
+    <div class="header-index-pt">        
+        <a asp-page="./IndexAdmin" class="btn-header-pt">Volver a Index de trabajos</a>
+        <div>
+            <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
+            <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
+            <script src="https://cdn.jsdelivr.net/npm/flatpickr/dist/l10n/es.js"></script> <!-- Cargar idioma español -->
+            <script>
+                document.addEventListener("DOMContentLoaded", function () {
+                    flatpickr("#fechaInicio", {
+                        dateFormat: "d-m-Y", // Formato dd-mm-yyyy
+                        locale: "es", // Establecer el idioma a español
+                    });
+                    flatpickr("#fechaFin", {
+                        dateFormat: "d-m-Y", // Formato dd-mm-yyyy
+                        locale: "es", // Establecer el idioma a español
+                    });
+                });
+            </script>
+            <form method="get">
+                <label for="fechaInicio">Fecha Inicio:</label>
+                <input type="text" id="fechaInicio" name="fechaInicio" required />
+
+                <label for="fechaFin">Fecha Fin:</label>
+                <input type="text" id="fechaFin" name="fechaFin" required />
+
+                <button type="button" id="filtrar" class="filtrar">Filtrar</button>
+            </form>
+        </div> <!-- FILTRAR POR FECHA -->
+        <button id="btnExportar" class="btnExportar">Exportar Excel</button>
+    </div>
 <table class="table" id="tabla">
     <thead>
         <tr>
@@ -111,7 +141,7 @@
         }
     </tbody>
 </table>
-<a asp-page="./IndexAdmin" class="btn-action">Volver a Index de trabajos</a>
+
 <button id="btnExportar">Exportar Excel</button>
 </body>
 <footer>
