--- a/PPTT/Pages/Shared/_Layout.cshtml
+++ b/PPTT/Pages/Shared/_Layout.cshtml
@@ -19,7 +19,7 @@
         <div class="navbar">
             <div class="navbar-logo">
                 <a asp-page="/Vistas/IndexLogueado"><img src="~/imagenes/3.png" alt="logogc" /></a>
-                <a class="a-to-index" asp-page="/Vistas/IndexLogueado">Pedidos de Trabajo - Cuartel General</a>
+                <a class="a-to-index" asp-page="/Vistas/IndexLogueado">Pedidos de Trabajo - Cuartel General - Edificio Cóndor</a>
             </div>
             <div class="centered-button">
                 @if (!pages.Contains(currentPage))
@@ -41,8 +41,8 @@
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
     <footer>
-        <p>Dirección de Informática - Departamento de Desarrollo y Mantenimiento de Sistemas</p>
-        <img src="~/imagenes/dirinfo (1).gif" alt="logogc" />
+        <img src="~/imagenes/dirinfo (3).gif" alt="logogc" />
+        <p>Dirección de Informática</p>
     </footer>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
