--- a/PPTT/Pages/Vistas/IngresoPersonal.cshtml
+++ b/PPTT/Pages/Vistas/IngresoPersonal.cshtml
@@ -121,22 +121,22 @@
             <legend>Ingreso Personal</legend>
             <hr/>
             <div>
-                <label for="DNI">DNI:</label>
+                <label for="DNI">DNI</label>
                 <input type="text" id="DNI" name="DNI" required />
             </div>
             <div>
-                <label for="NumerodeControl">Número de Control:</label>
+                <label for="NumerodeControl">Número de Control</label>
                 <input type="text" id="NumerodeControl" name="NumerodeControl" required />
             </div>
             <div class="password-container">
-                <label for="Contraseña">Contraseña:</label>
+                <label for="Contraseña">Contraseña</label>
                 <input type="password" id="Contraseña" name="Contraseña" required />
                 <button type="button" class="toggle-password" onclick="togglePassword()">Mostrar</button>
             </div>
             <hr/>
             <div class="login-botton">
-                <a href="/Vistas/OlvideContraseña">Olvidé Mi Contraseña</a>
                 <input type="submit" value="Ingresar" class="submit-log" />
+                <a href="/Vistas/OlvideContraseña">Olvidé Mi Contraseña</a>
             </div>
         </fieldset>
     </form>
