--- a/PPTT/Pages/Vistas/OlvideContraseña.cshtml
+++ b/PPTT/Pages/Vistas/OlvideContraseña.cshtml
@@ -132,7 +132,7 @@
             <legend>Recuperar Contraseña</legend>
             <hr/>
             <div class="box">
-                <span>Para recuperar su contraseña, ingrese su DNI y correo electrónico. Luego, revise su casilla de correo, donde encontrará su nueva contraseña para acceder al sistema.</span>
+                <span>Para recuperar su contraseña, ingrese su DNI y correo electrónico. Luego, revise su casilla de correo electrónico registrado, se le enviará una nueva contraseña que podra utilizar para acceder al sistema.</span>
             </div>
             <div>
                 <label for="dni">DNI:</label>
@@ -143,8 +143,7 @@
                 <input type="text" id="Correo" name="Correo" value="" required />
             </div>
             <hr />
-            <div class="login-botton">          
-                <a href="/Vistas/IngresoPersonal">Volver al log in</a>
+            <div class="login-botton">                          
                 <input type="submit" value="Enviar" class="submit-log" />
             </div>
         </fieldset>
