--- a/PPTT/Pages/Administradores/Delete.cshtml
+++ b/PPTT/Pages/Administradores/Delete.cshtml
@@ -16,8 +16,8 @@
     };
 }
 
-<h3>Borrar</h3>
-<h4>¿Estás seguro de dar de baja a este usuario?</h4>
+<h3>Dar de baja usuario</h3>
+
 <form method="post">
     <div>
         <dl class="row">
