--- a/PPTT/Pages/PT/IndexAdmin.cshtml
+++ b/PPTT/Pages/PT/IndexAdmin.cshtml
@@ -5,6 +5,36 @@
     ViewData["Title"] = "Pedidos de trabajo";
 }
 <body>
+    <div class="header-index-pt">
+        <a asp-page="./Finalizados" class="btn-header-pt">Trabajos Finalizados</a>
+        <div>
+            <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
+            <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
+            <script src="https://cdn.jsdelivr.net/npm/flatpickr/dist/l10n/es.js"></script> <!-- Cargar idioma español -->
+            <script>
+document.addEventListener("DOMContentLoaded", function () {
+    flatpickr("#fechaInicio", {
+        dateFormat: "d-m-Y", // Formato dd-mm-yyyy
+        locale: "es", // Establecer el idioma a español
+    });
+    flatpickr("#fechaFin", {
+        dateFormat: "d-m-Y", // Formato dd-mm-yyyy
+        locale: "es", // Establecer el idioma a español
+    });
+});
+</script>
+            <form method="get">
+                <label for="fechaInicio">Fecha Inicio:</label>
+                <input type="text" id="fechaInicio" name="fechaInicio" required />
+
+                <label for="fechaFin">Fecha Fin:</label>
+                <input type="text" id="fechaFin" name="fechaFin" required />
+
+                <button type="button" id="filtrar" class="filtrar">Filtrar</button>
+            </form>
+        </div> <!-- FILTRAR POR FECHA -->
+        <button id="btnExportar" class="btnExportar">Exportar Excel</button>
+    </div>
     <table class="table" id="tabla">
         <thead>
             <tr>
