--- a/PPTT/wwwroot/css/site.css
+++ b/PPTT/wwwroot/css/site.css
@@ -165,7 +165,7 @@ footer {
 .row-inputs {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: space-around;
     gap: 20px;
 }
 
@@ -243,3 +243,125 @@ input[type=number] {
         transform: scale(0.98);
     }
 
+.header-index-pt {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: space-around;
+    align-items: center;
+    background-color: #1d3557;
+    color: #f1faee;
+    padding: 10px 0;
+    box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.1);
+}
+
+table {
+    width: 100%;
+    border-collapse: collapse;
+    font-size: 0.75em;
+}
+
+th, td {
+    padding: 4px;
+    text-align: left;
+    border-bottom: 1px solid #ddd;
+    height: 8vh;
+}
+
+th {
+    background-color: #e0e8f1;
+    color: #003d6b;
+}
+
+table tr:nth-child(odd) td {
+    background-color: #e0e8f1;
+}
+
+table tr:nth-child(even) td {
+    background-color: #eeeeee;
+}
+
+
+.modal-content {
+    padding: 5px;
+}
+
+.modal-header, .modal-footer {
+    border: none;
+}
+
+#warningMessagePen {
+    display: block;
+    overflow: auto;
+    word-wrap: break-word;
+}
+
+.pagination {
+    display: flex;
+    gap: 5px;
+    justify-content: center;    
+}
+
+.filtrar {
+    display: inline-block;
+    text-decoration: none;
+    padding: 4px 6px;
+    margin: 2px;
+    border: 1px solid;    
+    background-color: #1d3557;
+    color: #ffffff;
+    transition: background-color 0.3s, transform 0.3s;
+    font-size: 0.9em;
+}
+
+    .filtrar:hover {
+        background-color: #ffffff;
+        color: #1d3557;
+    }
+
+.btnExportar {
+    display: inline-block;
+    text-decoration: none;
+    padding: 4px 6px;
+    margin: 2px;
+    border: 1px solid;    
+    background-color: #50A878;
+    color: white;
+    transition: background-color 0.3s, transform 0.3s;
+    font-size: 0.9em;
+}
+
+    .btnExportar:hover {
+        background-color: #50A868;
+    }
+
+a.btn-action {
+    display: inline-block;
+    text-decoration: none;
+    padding: 4px 6px; 
+    margin: 2px; 
+    border: 1px solid #003d6b; 
+    border-radius: 4px; 
+    background-color: #003d6b; 
+    color: white;
+    transition: background-color 0.3s, transform 0.3s;
+    font-size: 0.9em; 
+}
+    a.btn-action:hover {
+        background-color: #002e5d;
+    }
+a.btn-header-pt {
+    display: inline-block;
+    text-decoration: none;
+    padding: 4px 6px;
+    margin: 2px;
+    border: 1px #ffffff;
+    background-color: #ea6923;
+    color: #ffffff;
+    transition: background-color 0.3s, transform 0.3s;
+    font-size: 0.9em;
+}
+    a.btn-header-pt:hover {
+        background-color: #e16725;
+    }
