--- a/PPTT/Pages/PT/Finalizados.cshtml
+++ b/PPTT/Pages/PT/Finalizados.cshtml
@@ -7,7 +7,7 @@
 
 <body>
     <div class="header-index-pt">
-        <a asp-page="./IndexAdmin" class="btn-header-pt">Volver a Index de trabajos</a>
+        <a asp-page="./Index" class="btn-header-pt">Volver a Index de trabajos</a>
         <div>
             <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
             <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
