--- a/PPTT/Pages/Shared/_Layout.cshtml
+++ b/PPTT/Pages/Shared/_Layout.cshtml
@@ -41,7 +41,7 @@
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
     <footer>
-        <img src="~/imagenes/dirinfo (3).gif" alt="logogc" />
+        <img src="~/imagenes/dirinfo_logo.gif" alt="logogc" />
         <p>Dirección de Informática</p>
     </footer>
     @await RenderSectionAsync("Scripts", required: false)
